@startuml Simple Config Class Diagram

class ApiExceptionHandler {
}

class applicationConfig {
}

class CorsConfig {
}

class EmailConfig {
}

class OAuth2LoginSuccessHandler {
}

class SecurityConfig {
}

class StorageConfig {
}

class SwaggerConfig {
}

class customOauht2UserService {
}

' Relationships
OAuth2LoginSuccessHandler --> LoginServiceImpl : userService
SecurityConfig --> jwtAuthenticationFilter : jwtAuthenticationFilter
SecurityConfig --> customOauht2UserService : customOAuth2UserService
SecurityConfig --> OAuth2LoginSuccessHandler : oAuth2LoginSuccessHandler

@enduml